# TCC

./: .gitignore  Makefile  meson.build
src/backend/: appliances.c  appliances.h  auth.c  auth.h  classification.c  classification.h  config.c  config.h  configs.c  configs.h  data_acquisition.c  database.h  device_events.c  device_events.h  disaggregation.c  disaggregation.h  energy.c  energy.h  http.c  http.h  http_appliances.c  http_appliances.h  http_auth.c  http_auth.h  http_config.c  http_config.h  http_dashboard.c  http_dashboard.h  http_energy.c  http_energy.h  http_meter.c  http_meter.h  http_power.c  http_power.h  http_users.c  http_users.h  main.c  meter_events.c  power.c  power.h  (+3 more)
src/common/: common.h  communication.c  communication.h  logger.c  logger.h
src/data-export/: main.c
src/remote-control/: gnuplot.c  gnuplot.h  main.c  tftp.c  tftp.h
src/web-test/: main.c
src/web-test/www/: 2.html  index.html
src/web-test/www/css/: webtest_style.css
www/: appliances.html  configs.html  consumption.html  energy_chart.html  energy_chart_minutes.html  index.html  login.html  meter_events.html  power_chart.html  signature_chart.html  signatures.html  signup.html  users.html
www/css/: dashboard.css  dygraph.css
www/js/: appliances.js  appliances_page.js  auth.js  configs_page.js  consumption_page.js  dashboard.js  dygraph.min.js  energy_chart_minute_page.js  energy_chart_page.js  gauge.min.js  global_defs.js  login.js  meter_events_page.js  navbar.js  power_chart_page.js  signature_chart_page.js  signatures_page.js  signup.js  ui_components.js  user_info.js  users_page.js
(+2 files in other folders)
